crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-cayenne[file]_clickbench_q26_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q26"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                     |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: hits.SearchPhrase ASC NULLS LAST, fetch=10                                                                                                                         |
|               |   Filter: hits.SearchPhrase != LargeUtf8("")                                                                                                                             |
|               |     TableScan: hits projection=[SearchPhrase], partial_filters=[hits.SearchPhrase != LargeUtf8("")]                                                                      |
| physical_plan | SortPreservingMergeExec: [SearchPhrase@0 ASC NULLS LAST], fetch=10                                                                                                       |
|               |   SortExec: TopK(fetch=10), expr=[SearchPhrase@0 ASC NULLS LAST], preserve_partitioning=[true]                                                                           |
|               |     SchemaCastScanExec                                                                                                                                                   |
|               |       CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                  |
|               |         BytesProcessedExec                                                                                                                                               |
|               |           DataSourceExec: file_groups={32 groups: [<redacted>]}, projection=[SearchPhrase], file_type=vortex, predicate: SearchPhrase@39 !=  AND DynamicFilter [ empty ] |
|               |                                                                                                                                                                          |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
