crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__s3[parquet]-cayenne[file]_clickbench_q27_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q27"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                    |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Projection: hits.SearchPhrase                                                                                                                                                           |
|               |   Sort: to_timestamp(hits.EventTime) ASC NULLS LAST, hits.SearchPhrase ASC NULLS LAST, fetch=10                                                                                         |
|               |     Projection: hits.SearchPhrase, hits.EventTime                                                                                                                                       |
|               |       Filter: hits.SearchPhrase != LargeUtf8("")                                                                                                                                        |
|               |         TableScan: hits projection=[EventTime, SearchPhrase], partial_filters=[hits.SearchPhrase != LargeUtf8("")]                                                                      |
| physical_plan | ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase]                                                                                                                                   |
|               |   SortPreservingMergeExec: [to_timestamp(EventTime@1) ASC NULLS LAST, SearchPhrase@0 ASC NULLS LAST], fetch=10                                                                          |
|               |     SortExec: TopK(fetch=10), expr=[to_timestamp(EventTime@1) ASC NULLS LAST, SearchPhrase@0 ASC NULLS LAST], preserve_partitioning=[true]                                              |
|               |       ProjectionExec: expr=[SearchPhrase@1 as SearchPhrase, EventTime@0 as EventTime]                                                                                                   |
|               |         SchemaCastScanExec                                                                                                                                                              |
|               |           CayenneAccelerationExec: snapshots_scanned=<N>, files_scanned=<N>                                                                                                             |
|               |             BytesProcessedExec                                                                                                                                                          |
|               |               DataSourceExec: file_groups={16 groups: [<redacted>]}, projection=[EventTime, SearchPhrase], file_type=vortex, predicate: SearchPhrase@39 !=  AND DynamicFilter [ empty ] |
|               |                                                                                                                                                                                         |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
